--- a/web/styles/web_style.css
+++ b/web/styles/web_style.css
@@ -37,7 +37,7 @@ article p {
   width: 100%;
   height: 100vh;
   overflow-x: scroll;
-
+  overflow: hidden;
   scroll-snap-type: x mandatory;
 }
 
@@ -49,6 +49,19 @@ article p {
   justify-content: center;
   align-items: center;
   scroll-snap-align: center;
+}
+
+.active {
+  animation: fadeIn 3s;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0.9;
+  }
 }
 
 img {
