--- a/web/styles/index.css
+++ b/web/styles/index.css
@@ -81,3 +81,51 @@ button {
   border-radius: 5px;
   cursor: pointer;
 }
+
+/* Styles Navbar menú to API Web*/
+
+.menu-bar {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  transform: translate(30%, 10%);
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #272727af;
+  padding: 5px 30px;
+  border-radius: 50px;
+}
+
+.menu-bar ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  gap: 20px;
+}
+
+.menu-bar ul li {
+  color: #fff;
+  font-size: 18px;
+  cursor: pointer;
+  font-size: 15px;
+
+  a {
+    text-decoration: none;
+    color: #fff;
+    transition: all 0.3s ease-in-out;
+  }
+}
+
+.menu-bar img {
+  width: auto;
+  height: 50px;
+  margin: 0;
+}
+
+.menu-bar a:hover {
+  text-shadow: 0 0 2px #fff;
+}
