--- a/web/public/styles/menu.css
+++ b/web/public/styles/menu.css
@@ -1,10 +1,10 @@
 .menu-bar {
   display: flex;
   width: 100%;
-  height: 70px;
+  height: 60px;
   align-items: center;
   justify-content: space-between;
-  background-color: rgba(var(--bg-primary), 0.8);
+  background-color: var(--menu-bg-primary);
   backdrop-filter: blur(5px);
   border-bottom: 1px dashed var(--bg-secondary-dark);
 
@@ -41,10 +41,10 @@
     ul li {
       cursor: pointer;
       font-size: 14px;
-      font-weight: 500;
 
       a {
         text-decoration: none;
+        font-weight: 500;
         color: var(--text-secondary);
         transition: all 0.3s ease-in-out;
 
