--- a/web/public/styles/theme.css
+++ b/web/public/styles/theme.css
@@ -7,6 +7,7 @@
     --accent-color: #007bff;
     --hover-color: #0056b3;
     --border-color: rgba(0, 0, 0, 0.1);
+    --menu-bg-primary: rgba(255,255,255,0.5)
 }
 
 body.dark-mode {
@@ -18,6 +19,7 @@ body.dark-mode {
     --accent-color: #4da6ff;
     --hover-color: #6bb6ff;
     --border-color: rgba(255, 255, 255, 0.1);
+    --menu-bg-primary: rgba(0,0,0,0.5)
 }
 
 body {
